GPencil Weight Painting unresponsive #65699

Closed
opened 2019-06-10 22:39:33 +02:00 by Sam Brubaker · 7 comments

version: 2.80 (sub 74), branch: blender2.7, commit date: 2019-06-09 21:43, hash: 030c7df19d, type: Release
build date: 2019-06-09, 23:33:07
platform: Linux

How to reproduce:

  • Create a Grease Pencil object with a vertex group
  • Enter Weight Paint mode

Using the weight brush, try to paint some weight onto the stroke.

I'm unable to make the weight brush have any effect whatsoever. Weight can still be assigned in Edit Mode, but weight painting seems to be completely unresponsive now.

version: 2.80 (sub 74), branch: blender2.7, commit date: 2019-06-09 21:43, hash: 030c7df19da9, type: Release build date: 2019-06-09, 23:33:07 platform: Linux How to reproduce: - Create a Grease Pencil object with a vertex group - Enter Weight Paint mode # Using the weight brush, try to paint some weight onto the stroke. I'm unable to make the weight brush have any effect whatsoever. Weight can still be assigned in Edit Mode, but weight painting seems to be completely unresponsive now.
Author

Added subscriber: @rocketman

Added subscriber: @rocketman

Added subscribers: @ideasman42, @brecht, @antoniov

Added subscribers: @ideasman42, @brecht, @antoniov

@ideasman42 @brecht did you change anything in keymaps?

It looks the operator is not called at all (the invoke method is not called) when is in weighjt paint mode, but works in sculpt mode (using same operator).

@ideasman42 @brecht did you change anything in keymaps? It looks the operator is not called at all (the invoke method is not called) when is in weighjt paint mode, but works in sculpt mode (using same operator).
Campbell Barton was assigned by Antonio Vazquez 2019-06-10 23:16:27 +02:00

@ideasman42 I think this can be related to #65108 commit b69ed14ff7

@ideasman42 I think this can be related to #65108 commit b69ed14ff745
Author

Could be an unrelated bug, but I also seem to be having trouble assigning weights in edit mode. Only for certain objects, though-- I can't get it to reproduce reliably

Could be an unrelated bug, but I also seem to be having trouble assigning weights in edit mode. Only for certain objects, though-- I can't get it to reproduce reliably

This issue was referenced by a0608340ae

This issue was referenced by a0608340ae14363fb865b4f7d449c77176f953ac

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#65699
No description provided.