Fix T65699: gpencil weight paint unresponsive