source/blender/editors/gpencil/gpencil_brush.c
@@ -2130,6 +2130,7 @@ static int gpsculpt_brush_modal(bContext *C, wmOperator *op, const wmEvent *even
   return OPERATOR_RUNNING_MODAL;
 }
 
+/* Also used for weight paint. */
 void GPENCIL_OT_sculpt_paint(wmOperatorType *ot)
 {
   /* identifiers */
